kubernetes/indexer-deployment.yaml
### Indexer component
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pocketdex
    component: indexer
  name: pocketdex-indexer
spec:
  progressDeadlineSeconds: 15 # Adjust deployment progress deadline if needed
  replicas: 1 # Number of pod replicas
  revisionHistoryLimit: 10 # Number of old ReplicaSets to retain
  selector:
    matchLabels:
      app: pocketdex
      component: indexer
  strategy:
    type: Recreate # Restart strategy type
  template:
    metadata:
      labels:
        app: pocketdex
        component: indexer
    spec:
      containers:
        - name: pocketdex-indexer
          args: [ "--unfinalized-blocks=true" ] # Arguments for the container
          image: pocket-network/pocketdex:production # Docker image
          imagePullPolicy: IfNotPresent # Image pull policy
          resources:
            limits:
              cpu: "4"
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 20 # Time before the termination signal is sent to the container
