kubernetes/query-deployment.yaml
# Query component
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pocketdex
    component: query
  name: pocketdex-query
spec:
  progressDeadlineSeconds: 15 # Adjust deployment progress deadline if needed
  replicas: 1 # Scale as needed
  revisionHistoryLimit: 10 # Number of old ReplicaSets to retain
  selector:
    matchLabels:
      app: pocketdex
      component: query
  strategy:
    type: Recreate # Restart strategy type
  template:
    metadata:
      labels:
        app: pocketdex
        component: query
    spec:
      containers:
        - name: pocketdex-query
          command: [ "/bin/sh", "-c" ]
          # Inject the arguments into the CMD
          args: [ 'exec /sbin/tini -- /bin/run $(cat /mnt/config/args.txt) -f /app' ]
          image: subquerynetwork/subql-query:latest
          imagePullPolicy: IfNotPresent # Image pull policy
          volumeMounts:
            - name: config-volume
              mountPath: /mnt/config
          resources:
            limits:
              cpu: "4"
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      volumes:
        - name: config-volume
          emptyDir: { }
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 20 # Time before the termination signal is sent to the container
