kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pocketdex
    component: indexer
  name: pocketdex-indexer
spec:
  ports:
    - name: indexer
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: pocketdex
    component: indexer
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pocketdex
    component: query
  name: pocketdex-query
spec:
  ports:
    - name: query
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: pocketdex
    component: query
  sessionAffinity: None
  type: ClusterIP
