kubernetes/ingress.yaml
### IMPORTANT:
### THIS FILE IS JUST AN EXAMPLE SHOWING HOW TO EXPOSE THE POCKETDEX SERVICE WITH AN INGRESS.
### IT IS NOT MEANT TO BE USED AS IS AND WILL REQUIRE MODIFICATION TO FIT YOUR INGRESS CONTROLLER AND SETUP NEEDS.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketdex
  labels:
    app: pocketdex
    component: query
spec:
  ingressClassName: default
  rules:
    # CHANGE the host to the appropriate domain for your setup
    - host: pocketdex.testnet.your.domain.com
      http:
        paths:
          - backend:
              service:
                name: pocketdex-query
                port:
                  name: query
            path: /
            pathType: Prefix
  # If you need TLS support, uncomment the following lines and configure them as needed
  # tls:
  #   - hosts:
  #       - pocketdex.testnet.your.domain.com
  #     secretName: certificate-tls
